chore: 更新版本号和注释掉不必要的代码
- 将 build.gradle.kts 中的 appVersion 更新为 0.9.0。
- 注释掉 printVersion 任务以简化构建过程。
- 在 FileController.java 中添加 @Param 注解以增强代码可读性。
- 在 app.yml 中注释掉版本号配置，避免使用未定义的变量。
- 将多个测试用例中的代码注释掉，确保测试环境的整洁性。